# group-chat-digest

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci_pipeline.yml
src/: data_classes.py  main.py  message_storage.py  openai_utils.py  server.py  telegram_bot.py  utils.py  white_list.py
src/chat_nuff_bot/: message_storage.py  openai_utils.py  telegram_bot.py  utils.py
tests/: openai-test.py  telegram-bot-test.py  telegram_hello_world.py  test_message_storage.py  test_telegram_bot.py  test_utils.py  test_white_list.py
tests/test_chat_nuff_bot/: test_message_storage.py  test_utils.py
