[project]
name = "chat-nuff-bot"
version = "0.0.1"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "annotated-types==0.6.0",
    "anyio==4.3.0",
    "certifi==2024.2.2",
    "distro==1.9.0",
    "h11==0.14.0",
    "httpcore==1.0.4",
    "httpx==0.26.0",
    "idna==3.6",
    "openai==1.12.0",
    "pydantic==2.6.1",
    "pydantic_core==2.16.2",
    "python-dotenv==1.0.1",
    "python-telegram-bot==20.8",
    "redis==5.0.4",
    "sniffio==1.3.0",
    "starlette==0.37.2",
    "tqdm==4.66.2",
    "typing_extensions==4.9.0",
    "uvicorn==0.29.0"
]

[tool.rye]
virtual = true
dev-dependencies = [
    "pytest==8.2.0",
    "fakeredis==2.22.0",
    "pytest-xdist==3.6.1",
    "pytest-spec==3.2.0",
    "ruff==0.4.3",
    "pytest-mock==3.14.0",
    "pytest-asyncio==0.23.6"
]

[tool.ruff]
line-length = 120
exclude = [
    "__init__.py",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.rye.scripts]
build-dev = "docker-compose up -d --build"
dev = "docker-compose up -d"
stop = "docker-compose down"
redis = "docker-compose up -d redis"
tests = "pytest -n auto tests --spec"
lint = "ruff check src/"

